#pragma once

struct Niveau
{
    const char* sequenceATrouver;
    uint8_t dureePenaliteEnSecondes;
    uint16_t countDownEnSecondes;
};
