#pragma once

class Tache {
public:
    virtual void tick() = 0;
};